added LRU Cache and added duplicate prevention

--- a/.env_sample
+++ b/.env_sample
@@ -1,5 +1,4 @@
 # --- Log & Path Configuration ---
-# Your Apache log path from the VPS samples
 LOG_PATH="samples/nginx_access.log"
 WHITE_LIST_PATH="./whitelist.txt"
 BANNED_FILE_PATH="./banned_ips.txt"
@@ -22,3 +21,5 @@ PREVIEW_MODE=true
 # If you need to override the default Nginx/Apache regex, do it here.
 # Leave empty to use the built-in dual-fallback logic.
 REGEX_OVERRIDE=""
+
+SCAN_ALL_MODE=false
