added Weighted Scoring Engine

--- a/.env_sample
+++ b/.env_sample
@@ -1,12 +1,21 @@
 # --- Log & Path Configuration ---
+# Your http Nginx log path
 LOG_PATH="samples/nginx_access.log"
 WHITE_LIST_PATH="./whitelist.txt"
 BANNED_FILE_PATH="./banned_ips.txt"
 
+# --- Rules Configuration (v0.2.0+) ---
+# Path to rules.conf file for weighted scoring (leave empty for backward-compatible mode)
+RULES_PATH="./rules.conf"
+# Multiplier for repeat path hits (0.1 = 10% of original score)
+REPEAT_PENALTY=0.1
+
 # --- Heuristics ---
-# How many 4xx errors before a ban (10 is standard, 5 for strict)
-BAN_THRESHOLD=5
-# How long to remember a 404 before it expires from memory
+# Score threshold before a ban (10.0 is standard, lower for stricter)
+# When using rules: paths are scored, and ban triggers when cumulative score >= threshold
+# Without rules: each 4xx = 1.0 score (backward compatible with count-based threshold)
+BAN_THRESHOLD=10
+# How long to remember errors before they expire from memory
 BAN_WINDOW="15m"
 
 # --- Firewall Settings ---
