handling ip doing binary protocol probes (RDP, TLS, SMB) to web ports, now detected and instantly banned.

--- a/.env_sample
+++ b/.env_sample
@@ -21,6 +21,7 @@ BAN_WINDOW="15m"
 # --- Firewall Settings ---
 # The name of the nftables set we created in the 'inet filter' table
 NFT_SET_NAME="parasites"
+NFT_SET_NAME_V6="parasites6"
 
 # --- Operational Modes ---
 # Set to 'true' to see what would happen without actually banning anyone
