--- a/rules.conf
+++ b/rules.conf
@@ -14,6 +14,7 @@
 0.1   ^/apple-touch-icon
 0.1   \.woff2?$
 0.1   \.ttf$
+0.001   \.png$
 
 # ============================================
 # MEDIUM PRIORITY (1.0) - General probing
@@ -64,3 +65,4 @@
 10.0  /r57\.php
 10.0  /alfa\.php
 10.0  /cgi-bin/.*\.sh$       # Shell script execution
+
