--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -6,16 +6,18 @@ on:
     tags: [ 'v[0-9]+.[0-9]+.[0-9]+' ]
 
 env:
+  # Use docker.io for Docker Hub if empty
   REGISTRY: ghcr.io
-  # This will be: ghcr.io/your-username/go-log-scythe
+  # github.repository as <account>/<repo>
   IMAGE_NAME: ${{ github.repository }}
 
 jobs:
-  build-and-push:
+  build-scan-and-push:
     runs-on: ubuntu-latest
     permissions:
       contents: read
       packages: write
+      security-events: write # Mandatory for uploading SARIF results
 
     steps:
       - name: Checkout repository
@@ -26,9 +28,7 @@ jobs:
         with:
           go-version: '1.25.5'
 
-      # We keep the test step but simplify it to standard Go tests
-      # as your project has no external DB dependencies.
-      - name: Run Tests
+      - name: Run Unit Tests
         run: go test -v ./...
 
       - name: Setup Docker buildx
@@ -41,8 +41,33 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      # Automatically generates tags like 'latest' and '0.3.1'
-      # based on your git tag.
+      # 1. Build the image locally first for scanning
+      - name: Build local image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          load: true # This loads the image into the local docker daemon instead of pushing it
+          tags: go-log-scythe:test
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
+      # 2. Run your verified Trivy scanner
+      - name: Run Trivy vulnerability scanner
+        uses: aquasecurity/trivy-action@master
+        with:
+          image-ref: 'go-log-scythe:test'
+          severity: 'MEDIUM,CRITICAL,HIGH'
+          ignore-unfixed: true
+          format: 'sarif'
+          output: 'trivy-results.sarif'
+
+      # 3. Upload results to the Security tab
+      - name: Upload Trivy scan results
+        uses: github/codeql-action/upload-sarif@v3
+        with:
+          sarif_file: 'trivy-results.sarif'
+
+      # 4. Final Push - Only if previous steps (including scan) succeeded
       - name: Extract Docker metadata
         id: meta
         uses: docker/metadata-action@v5
