Added Burst detection

--- a/.env_sample
+++ b/.env_sample
@@ -18,6 +18,15 @@ BAN_THRESHOLD=10
 # How long to remember errors before they expire from memory
 BAN_WINDOW="15m"
 
+# --- Burst Detection (v0.4.0+) ---
+# Instant ban when an IP sends N 4xx requests within a short window (catches aggressive scanners)
+# Set BURST_LIMIT=0 to disable burst detection entirely
+BURST_LIMIT=5
+# Sliding window duration for burst counting
+BURST_WINDOW="3s"
+# Poll interval for tail -f style log monitoring (lower = faster reaction, slightly more CPU)
+TAIL_POLL_INTERVAL="100ms"
+
 # --- Firewall Settings ---
 # The name of the nftables set we created in the 'inet filter' table
 NFT_SET_NAME="parasites"
