Reorder nftables rules to drop attacker as soon as it is detected

--- a/deploy/nftables.conf
+++ b/deploy/nftables.conf
@@ -51,8 +51,6 @@ table inet filter {
 	    type filter hook input priority 0; policy drop;
          # 1. Allow Essential Loopback Connectivity
 	    iif "lo" accept
-        # Allow Established (Already connected traffic)
-	    ct state established,related accept
 
         # 2. Trusted Infrastructure (FAST TRACK)
         # ⚠️ ⚠️  it's VERY IMPORTANT to add your own rules here !
@@ -61,19 +59,28 @@ table inet filter {
         tcp dport 22 ip saddr { 37.59.116.18, 141.95.18.229 } accept comment "Trusted SSH Sources"
         tcp dport 9100 ip saddr { 141.95.18.229, 127.0.0.1 } accept comment "Trusted Prometheus Sources"
 
-        # 3. Allow essential IPv4 + IPv6 ICMP (after loopback, before established)
+        # 3. The Ban Hammer — BEFORE ct state established so that even existing
+        #    HTTP keep-alive connections from banned IPs are killed instantly.
+        #    Trusted IPs above are checked first, so SSH/Prometheus are never affected.
+        #    Rate-limited logging: writes to kern.log with NFT_BAN prefix (max 6/min per IP)
+        ip saddr @parasites limit rate 6/minute burst 3 packets log prefix "NFT_BAN " drop
+        ip saddr @parasites drop
+        ip6 saddr @parasites6 limit rate 6/minute burst 3 packets log prefix "NFT_BAN6 " drop
+        ip6 saddr @parasites6 drop
+
+        # 4. Allow Established (AFTER parasites — banned IPs can no longer ride
+        #    existing connections through ct state established)
+	    ct state established,related accept
+
+        # 5. Allow essential IPv4 + IPv6 ICMP
         ip protocol icmp icmp type { echo-request, echo-reply, destination-unreachable, time-exceeded, parameter-problem } accept
         icmpv6 type { echo-request, echo-reply, packet-too-big, destination-unreachable, time-exceeded, nd-neighbor-solicit, nd-neighbor-advert, nd-router-solicit, nd-router-advert } accept
 
-        # 4. The Ban Hammer (Drop parasites AFTER checking trusted sources) used by  goLogScythe Tool
-        ip saddr @parasites drop
-        ip6 saddr @parasites6 drop
-
-        # 5. Allow http and https public services (log audited by goLogScythe)
+        # 6. Allow http and https public services (log audited by goLogScythe)
         tcp dport { 80, 443 } accept comment "for Nginx HTTP/S"
 
-        # 6. Final Catch-all logging
-        limit rate 12/minute burst 5 packets log prefix NFT_DROP drop
+        # 7. Final Catch-all logging
+        limit rate 12/minute burst 5 packets log prefix "NFT_DROP " drop
 	}
 	chain forward {
 		type filter hook forward priority filter;
